# BaseSAFE

./: .gitignore  Dockerfile  README.md  build_afl.sh
basesafe/errc/connections/: 1  14  17  18  20  21  3  33  34  37  38  50  54  68  7  75  id:000000,src:000254,time:1483998619,op:MOpt_havoc,rep:32  id:000000,src:000280,time:1483977360+000172,op:MOpt_core_splice,rep:16  id:000000,src:000282,time:1483981477+000040,op:MOpt_splice,rep:2  id:000000,src:000369,time:1484556159+001455,op:MOpt_splice,rep:2  id:000000,src:000406,time:1483988847,op:MOpt_havoc,rep:2  id:000000,src:000498,time:1484512705+000563,op:MOpt_splice,rep:2  id:000000,src:000832,time:1484539293,op:MOpt_core_havoc,rep:2  id:000000,src:000932,time:1483961562+001103,op:MOpt_splice,rep:32  id:000000,src:001045,time:1484952559+000118,op:MOpt_splice,rep:2  id:000000,src:001459,time:1484526077+001569,op:MOpt_core_splice,rep:4  id:000000,src:001530,time:1485433953,op:MOpt_havoc,rep:4  id:000000,time:0,orig:auto_000031  id:000001,src:000178,time:1484538260+001168,op:MOpt_core_splice,rep:4  id:000001,src:000420,time:1484972480+001074,op:MOpt_splice,rep:64  id:000001,src:000423,time:1485451516,op:MOpt_havoc,rep:32  id:000001,src:000465,time:1484529584,op:MOpt_core_havoc,rep:8  (+757 more)
examples/emm/: Cargo.toml
examples/emm/src/: main.rs
examples/errc/: Cargo.toml
examples/shannon_cc/: Cargo.toml  README.md
examples/shannon_cc/data/: noise.py
examples/shannon_cc/src/: main.rs
unicornafl_bindings/: Cargo.toml  README.md  build.rs
unicornafl_bindings/src/: arm.rs  ffi.rs  lib.rs  unicorn_const.rs  utils.rs
(+640 files in other folders)
