[package]
name = "unicornafl"
version = "0.9.0-afl"
authors = ["Dominik Maier <domenukk@gmail.com>", "Lukas Seidel"]
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "GPL-2.0"
readme = "README.md"
description = "Rust bindings and utilities for the unicornafl emulator"
build = "build.rs"
links = "unicornafl"

[dependencies]
bitflags = "1.0"
libc = "0.2"
capstone="0.6.0"

[build-dependencies]
build-helper = "0.1"
